--- a/HomePage.html
+++ b/HomePage.html
@@ -2,5 +2,6 @@
   <body> 
     <h1> Hello, Welcome to SCC Practical 04 </h1>
     <p> This is the changes made </p>
+    <h2> Hello this is sponsor branch changes </h2>
   </body>
 </html>
